# concerto-tree-sitter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  ROADMAP.md  agents.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bindings/c/: tree-sitter-concerto.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_concerto/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConcerto/: concerto.h
bindings/swift/TreeSitterConcertoTests/: TreeSitterConcertoTests.swift
editor/helix/: languages.toml.snippet
editor/nvim-treesitter/: filetypes.lua.snippet  parsers.lua.snippet
editor/nvim-treesitter/queries/concerto/: folds.scm  highlights.scm  indents.scm  locals.scm
examples/: advanced.cto  basic.cto  decorators.cto  imports.cto  maps.cto  scalars.cto
queries/: highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/: test-queries.sh
test/corpus/: assets_participants.txt  comments.txt  concepts.txt  concerto_version.txt  decorators.txt  enums.txt  fields.txt  imports.txt  maps.txt  namespace.txt  scalars.txt  validators.txt
test/highlight/: declarations.cto  decorators.cto  fields_and_validators.cto  imports.cto
